--- a/Languages/English/Keyed/Misc_Gameplay.xml
+++ b/Languages/English/Keyed/Misc_Gameplay.xml
@@ -10,4 +10,11 @@
 	<NocturnalAnimals.BodyClock_Nocturnal>Nocturnal</NocturnalAnimals.BodyClock_Nocturnal>
 	<NocturnalAnimals.BodyClock_Crepuscular>Crepuscular</NocturnalAnimals.BodyClock_Crepuscular>
 
+	<VAEE.ReleaseIntoWild>Release to the wild</VAEE.ReleaseIntoWild>
+	<VAEE.ReleaseIntoWildDesc>Release this animal to the wild and increase relations with tribal and outlander factions.</VAEE.ReleaseIntoWildDesc>
+	<VAEE.LetterLabelExtintAnimalsPasses>Endangered Animals.</VAEE.LetterLabelExtintAnimalsPasses>
+	<VAEE.LetterExtintAnimalsPasses>A pair of {0}, critically endangered, have wandered into the area.\n\nThey can easily fall prey to larger predators and poachers, but you can tame them and bring them to safety. \n\nReleasing endangered animals into the wild will boost relations with tribal and outlander factions.</VAEE.LetterExtintAnimalsPasses>
+	<VAEE.ReleasingToTheWildMessage>Releasing an endangered animal into the wild improved relations with tribal and outlander factions by +2.</VAEE.ReleasingToTheWildMessage>
+	<VAEE.ReleasingToTheWildConfirmation>Releasing to the wild\n\nReleasing an animal to the wild means you will never see it again, as the animal will walk off the map.</VAEE.ReleasingToTheWildConfirmation>
+	<VAEE.Cancel>Cancel</VAEE.Cancel>
 </LanguageData>
