added new mod settings

--- a/Languages/English/Keyed/Misc_Gameplay.xml
+++ b/Languages/English/Keyed/Misc_Gameplay.xml
@@ -17,4 +17,5 @@
 	<VAEE.ReleasingToTheWildMessage>Releasing an endangered animal into the wild improved relations with tribal and outlander factions by +2.</VAEE.ReleasingToTheWildMessage>
 	<VAEE.ReleasingToTheWildConfirmation>Releasing to the wild\n\nReleasing an animal to the wild means you will never see it again, as the animal will walk off the map.</VAEE.ReleasingToTheWildConfirmation>
 	<VAEE.Cancel>Cancel</VAEE.Cancel>
+	<VAEE.AddBanishGizmoToAllAnimals>Add release into wild button to all animals</VAEE.AddBanishGizmoToAllAnimals>
 </LanguageData>
